<resources>
    <string name="app_name">TestingDM</string>
    <string name="Characters">Characters</string>
    <string name="NPCs">NPCs</string>
    <string name="Table">Table</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="character_screen">Character Screen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_level"></string>
    <string name="title_activity_character_screen">characterScreen</string>
    <string name="tab_text_1">Stats</string>
    <string name="tab_text_2">Inventory</string>
    <string name="tab_text_3">Skills</string>
    <string name="delete_Character">By entering a character name here, that character will be banished to the lowest depths of the Underworld and burn for an eternity (A very long time!)</string>

    <string name="nameInput">Character Name</string>
    <string name="strInput">Str</string>
    <string name="intInput">Int</string>
    <string name="wisInput">Wis</string>
    <string name="dexInput">Dex</string>
    <string name="conInput">Con</string>
    <string name="chaInput">Cha</string>
    <string name="lvlInput">Lvl</string>
    <string name="saveResults">Save</string>
    <string name="addThing">Add</string>

    <string name="NPCtitle">NPC Creator</string>
    <string name="susInput">Suspicious</string>
    <string name="neutralInput">Neutral</string>
    <string name="lawfulInput">Lawful</string>
    <string name="chaoticInput">Chaotic</string>
    <string name="trustedInput">Trusted</string>
    <string name="goodInput">Good</string>
    <string name="evilInput">Evil</string>
    <string name="secretInput">Secret</string>
    <string name="companion">Companion</string>
    <string name="background">Background</string>
    
    <string-array name="Classes">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rogue</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>

    <string-array name="Races">
        <item>Human</item>
        <item>Elf</item>
        <item>Gnome</item>
        <item>Dwarf</item>
        <item>Halfling</item>
        <item>Dragonborn</item>
        <item>Tiefling</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
    </string-array>



<string name="acrobatics">Acrobatics</string>
    <string name="animalHandling">Animal Handling</string>
    <string name="arcana">Arcana</string>
    <string name="athletics">Athletics</string>
    <string name="deception">Deception</string>
    <string name="history">History</string>
    <string name="insight">Insight</string>
    <string name="intimidation">Intimidation</string>
    <string name="investigation">Investigation</string>
    <string name="medicine">Medicine</string>
    <string name="nature">Nature</string>
    <string name="perception">Perception</string>
    <string name="performance">Performance</string>
    <string name="persuasion">Persuasion</string>
    <string name="religion">Religion</string>
    <string name="slightOfHand">Slight of Hand</string>
    <string name="stealth">Stealth</string>
    <string name="survival">Survival</string>
    <string name="title_activity_npc_view">npcView</string>
    <string name="action_settings">Settings</string>


</resources>
