<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".npc.npcViewFragment"
    tools:showIn="@layout/activity_npc_view">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nameInput"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <com.google.android.material.chip.ChipGroup
        android:theme="@style/Theme.MaterialComponents.Light"
        android:id="@+id/chipGroup"
        android:layout_width="389dp"
        android:layout_height="103dp"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.102">

        <com.google.android.material.chip.Chip
            android:id="@+id/suspicious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/susInput"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/trusted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trustedInput"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chaotic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chaoticInput"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/neutral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/neutralInput"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goodInput"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/evil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evilInput"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/lawful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lawfulInput"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/companion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companion"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/secret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secretInput"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

    </com.google.android.material.chip.ChipGroup>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="182dp"
        android:layout_marginLeft="182dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/background"
        app:layout_constraintBottom_toTopOf="@+id/chipGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>