<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ui.main.characterEdit">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/character_level"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/intInput"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="508dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/intInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/wisInput"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="508dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/wisInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/strInput"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="508dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/strInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/conInput"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="508dp"
        android:autofillHints="@string/nameInput"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/conInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/dexInput"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="508dp"
        android:autofillHints="@string/nameInput"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/dexInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.573"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/chaInput"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="508dp"
        android:autofillHints="@string/nameInput"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/chaInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:background="#CCCCCC"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <requestFocus
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </EditText>
</androidx.constraintlayout.widget.ConstraintLayout>