<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.characterScreen">

    <EditText
        android:id="@+id/chaInput"
        android:layout_width="59dp"
        android:layout_height="64dp"
        android:autofillHints="@string/nameInput"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/chaInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/strInput"
        android:layout_width="59dp"
        android:layout_height="64dp"
        android:autofillHints="@string/nameInput"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/strInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/conInput"
        android:layout_width="59dp"
        android:layout_height="64dp"
        android:autofillHints="@string/nameInput"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/conInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/intInput"
        android:layout_width="59dp"
        android:layout_height="64dp"
        android:autofillHints="@string/nameInput"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/intInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/wisInput"
        android:layout_width="59dp"
        android:layout_height="64dp"
        android:autofillHints="@string/nameInput"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/wisInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.752"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/dexInput"
        android:layout_width="59dp"
        android:layout_height="64dp"
        android:autofillHints="@string/nameInput"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/dexInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/nameInput"
        android:ems="10"
        android:hint="@string/nameInput"
        android:inputType="textPersonName"
        app:layout_anchor="@+id/view_pager"
        app:layout_anchorGravity="center|top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.100000024" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>


</androidx.constraintlayout.widget.ConstraintLayout>